Add about page, refactor home and help pages, add tests for static pages

--- a/Microblog/app/views/static_pages/help.html.erb
+++ b/Microblog/app/views/static_pages/help.html.erb
@@ -1,4 +1,12 @@
-<h1>Microblog Help</h1>
-<p>
-  This is the help page for the microblog sample application.
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Help | Microblog</title>
+  </head>
+  <body>
+    <h1>Microblog Help</h1>
+    <p>
+      This is the help page for the microblog sample application.
+    </p>
+  </body>
+</html>
