--- a/Microblog/app/views/static_pages/home.html.erb
+++ b/Microblog/app/views/static_pages/home.html.erb
@@ -1,4 +1,12 @@
-<h1>Microblog Home</h1>
-<p>
-  This is the home page for the microblog sample application.
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home | Microblog</title>
+  </head>
+  <body>
+    <h1>Microblog Home</h1>
+    <p>
+      This is the home page for the microblog sample application.
+    </p>
+  </body>
+</html>
