--- a/Microblog/app/views/static_pages/help.html.erb
+++ b/Microblog/app/views/static_pages/help.html.erb
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Help | Microblog</title>
-  </head>
-  <body>
-    <h1>Microblog Help</h1>
-    <p>
-      This is the help page for the microblog sample application.
-    </p>
-  </body>
-</html>
+<% provide(:title, "Help") %>
+<h1>Microblog Help</h1>
+<p>
+  This is the help page for the microblog sample application.
+</p>
