--- a/Microblog/app/views/static_pages/home.html.erb
+++ b/Microblog/app/views/static_pages/home.html.erb
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Home | Microblog</title>
-  </head>
-  <body>
-    <h1>Microblog Home</h1>
-    <p>
-      This is the home page for the microblog sample application.
-    </p>
-  </body>
-</html>
+<% provide(:title, "Home") %>
+<h1>Microblog Home</h1>
+<p>
+  This is the home page for the microblog sample application.
+</p>
