--- a/Microblog/app/views/layouts/application.html.erb
+++ b/Microblog/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+      <%= link_to "Microblog", "#", id: "logo", class: "navbar-brand" %>
+      <div class="navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><%= link_to "Home", '#', class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "Help", '#', class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "Log in", '#', class: "nav-link" %></li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container">
+      <%= yield %>
+    </div>
+    
   </body>
 </html>
