--- a/Microblog/app/views/static_pages/home.html.erb
+++ b/Microblog/app/views/static_pages/home.html.erb
@@ -1,4 +1,11 @@
-<h1>Microblog Home</h1>
-<p>
-  This is the home page for the microblog sample application.
-</p>
+<div class="center jumbotron">
+  <h1>Welcome to the Microblog App</h1>
+
+  <h2>
+    This is the home page for the Microblog sample Rails application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
