--- a/Microblog/app/assets/stylesheets/custom.scss
+++ b/Microblog/app/assets/stylesheets/custom.scss
@@ -16,10 +16,11 @@ textarea {
 
 .center {
   text-align: center;
-}
-
-.center h1 {
-  margin-bottom: 10px;
+  /* nesting elements, supported in SASS */
+  /* this is the same as `.center h1` */
+  h1 {
+    margin-bottom: 10px;
+  }
 }
 
 /* typography */
@@ -41,7 +42,9 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #777;
+  /* color: #777; */
+  /* using bootstrap SASS variable here, same as #777 */
+  color: $gray-600;
 }
 
 p {
@@ -60,9 +63,38 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+  /* same as `logo:hover` */
+  &:hover {
+    color: #fff;
+    text-decoration: none;
+  }
 }
 
-#logo:hover {
-  color: #fff;
-  text-decoration: none;
+/* footer */
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid $gray-200;
+  color: $gray-600;
+  a {
+    /* color: #555; */
+    color: $gray-700;
+    &:hover {
+      /* color: #222; */
+      color: $gray-900;
+      text-decoration: none;
+    }    
+  }
+  small {
+    float: left;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 15px;
+    }
+  }
 }
