--- a/Microblog/app/views/layouts/application.html.erb
+++ b/Microblog/app/views/layouts/application.html.erb
@@ -10,20 +10,10 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
-      <%= link_to "Microblog", "#", id: "logo", class: "navbar-brand" %>
-      <div class="navbar-collapse">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><%= link_to "Home", '#', class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "Help", '#', class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "Log in", '#', class: "nav-link" %></li>
-        </ul>
-      </div>
-    </nav>
-
+    <%= render 'layouts/header' %>
     <div class="container">
       <%= yield %>
+      <%= render 'layouts/footer' %>
     </div>
-    
   </body>
 </html>
