--- a/Microblog/app/views/layouts/_header.html.erb
+++ b/Microblog/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
-  <%= link_to "Microblog", "#", id: "logo", class: "navbar-brand" %>
+  <%= link_to "Microblog", root_path, id: "logo", class: "navbar-brand" %>
   <div class="navbar-collapse">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item"><%= link_to "Home", '#', class: "nav-link" %></li>
-      <li class="nav-item"><%= link_to "Help", '#', class: "nav-link" %></li>
+      <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link" %></li>
+      <li class="nav-item"><%= link_to "Help", help_path, class: "nav-link" %></li>
       <li class="nav-item"><%= link_to "Log in", '#', class: "nav-link" %></li>
     </ul>
   </div>
