--- a/rails_cms/app/views/layouts/application.html.erb
+++ b/rails_cms/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsCms</title>
+    <title>Rails CMS</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
