--- a/rails_cms/app/views/pages/_form.html.erb
+++ b/rails_cms/app/views/pages/_form.html.erb
@@ -6,8 +6,7 @@
     <td><%= f.text_field(:name) %></td>
   </tr>
   <tr>
-    <th>Subject ID</th>
-    <!-- map sets the select option name and value as an array -->
+    <th>Subject</th>
     <td><%= f.select(:subject_id, @subjects.map {|i| [i.name, i.id]}) %></td>
   </tr>
   <tr>
