--- a/rails_cms/app/views/sections/_form.html.erb
+++ b/rails_cms/app/views/sections/_form.html.erb
@@ -6,7 +6,7 @@
     <td><%= f.text_field(:name) %></td>
   </tr>
   <tr>
-    <th>Page ID</th>
+    <th>Page</th>
     <td><%= f.select(:page_id, @pages.map {|i| [i.name, i.id]}) %></td>
   </tr>
   <tr>
