Add line items and carts

--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <body>
     <header class="main">
       <%= image_tag('logo.svg', alt: 'Depot Books Online') %>
-      <h1><%= @page_title %></h1>
+      <h3>Depot Books Online</h2>
     </header>
     <section class="content">
       <nav class="side_nav">
