--- a/depot/app/assets/stylesheets/application.scss
+++ b/depot/app/assets/stylesheets/application.scss
@@ -19,14 +19,19 @@ body {
   padding: 0;
 }
 header.main {
-  text-align: center; // center on mobile
-  @media (min-width: 30em) {
-    text-align: left; // left align on desktop
-  }
+  display: flex;
+  align-items: center;
   background: #282;
   margin: 0;
-  h1 {
-    display: none;
+  h3 {
+    font-size: 2em;
+    font-weight: 200;
+    letter-spacing: 0.15em;
+    color: #bfb;
+  }
+  img {
+    height: 40px;
+    padding: 0px 15px 0px 17px;
   }
 }
 .content {
@@ -78,4 +83,14 @@ header.main {
   main {
     padding: 0.5em;
   }
+}
+.notice, #notice {
+  background: #ffb;
+  border-radius: 0.5em;
+  border: solid 0.177em #882;
+  color: #882;
+  font-weight: bold;
+  margin-bottom: 1em;
+  padding: 1em 1.414em;
+  text-align: center;
 }
