--- a/depot/app/assets/stylesheets/line_items.scss
+++ b/depot/app/assets/stylesheets/line_items.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the LineItems controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// define hi-light-fade for newly added items
+@keyframes line-item-hilight {
+  0% {
+    background: #8f8;
+  }
+  100% {
+    background: none;
+  }
+}
+
+.line-item-hilight {
+  animation: line-item-hilight 1.5s;
+}
