--- a/depot/app/assets/stylesheets/carts.scss
+++ b/depot/app/assets/stylesheets/carts.scss
@@ -38,8 +38,13 @@
     color: white;
     font-size: 1em;
     padding: 0.354em 1em;
+    margin: 5px 0px 0px 6px;
   }
   input[type="submit"]:hover {
     background-color: #c04040;
+  }
+  .actions {
+    display: flex;
+    justify-content: flex-end;
   }
 }
